--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
           >
           <input class="texto" type="text" name="texto" id="texto" />
           <legend>
-            &#8520; Ahora se pueden usar caracteres especiales, mayusculas y numeros
+            &#8520; Ahora se pueden usar caracteres especiales, mayusculas y
+            numeros
           </legend>
           <button class="codi" id="codificar">Codificar</button>
-          <button class="deco" id="decodificar">Decoodificar</button>
+          <button class="deco" id="decodificar">Decodificar</button>
         </div>
 
         <fieldset>
@@ -39,11 +40,12 @@
             rows="10"
             readonly
           ></textarea>
-          <input id="copiar" class="copi" type="submit" value="copiar" />
+          <input id="copiar" class="copi" type="submit" value="Copiar" />
         </fieldset>
       </form>
     </main>
 
     <script src="JS/script.js"></script>
+    
   </body>
 </html>
